Rename to a more descriptive root react container name

--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,6 @@
     <meta charset='UTF-8'>
   </head>
   <body>
-    <div id='content'></div>
+    <div id='desktop-app-container'></div>
   </body>
 </html>
